<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnBasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margins"
        android:text="@string/basic" />

    <Button
        android:id="@+id/btnIntermediate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margins"
        android:text="@string/intermediate" />

    <Button
        android:id="@+id/btnAdvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margins"
        android:text="@string/advanced" />

    <Button
        android:id="@+id/btnAutomatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margins"
        android:text="@string/automatic" />

</LinearLayout>